Added csv reader and xml handler.

--- a/CarServiceApp/CarServiceApp.csproj
+++ b/CarServiceApp/CarServiceApp.csproj
@@ -18,4 +18,13 @@
     <Folder Include="Data\OutputData\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\Files\fuel.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\Files\manufacturers.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
